--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=IBM+Plex+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crete+Round&display=swap');
 body {
     background-color: #131316;
-    color: #ffffff;
+    color: whitesmoke;
     font-family: 'IBM Plex Mono', monospace;
     padding: 0;
     margin: 0;
@@ -28,15 +29,18 @@ section {
 }
 
 header {
-    background-color: blue;
-    margin-top: 0%;
+    background-color: rgb(115, 191, 253);
 }
 
-nav {
-    background-color: red;
+.navlink:hover {
+    
+    background-color: #dd5800;
+    color: rgb(0, 0, 0);
 }
 
-ul {
+.container {
+    font-size: larger;
+    width: 30%;
+    /* font-family: 'Crete Round', serif; */
     
 }
-
