got picture and text next to each other. figuring out flexbox

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,13 +46,21 @@ section {
 }
 
 .container {
-    font-size: larger;
-    
-    /* font-family: 'Crete Round', serif; */
     
 }
 
+img {
+    max-width: 75%;
+}
+
+#starter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #portfolioImage {
-    height: 100px;
-    width: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
