--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -52,11 +52,7 @@ body::-webkit-scrollbar-thumb {
     max-width: 70%;
 }
 
-#starter {
-    border: 3px solid;
-    
-}
-#starter2 {
+#starter, #starter2 {
     border: 3px solid;
     
 }
